--- a/1.Customisable Pizzas/.TaskDetails.md
+++ b/1.Customisable Pizzas/.TaskDetails.md
@@ -1,28 +1,28 @@
-Android Coding Task
-September 2021
-
-OVERVIEW
+<h1>Android Coding Task-1</h1>
+<h2>OVERVIEW</h2>
 Build a native Android app for ordering customisable pizzas.
-When ordering, the user can customise the crust & size of the pizzas. The user should be able to
+<p>When ordering, the user can customise the crust & size of the pizzas. The user should be able to
 order as many pizzas as they wish. Pizzas with the same crust & size choices must be treated as
-a ‘custom pizza’ entity.
-If the user:
+a ‘custom pizza’ entity.</p>
+
+<h3>If the user:</h3>
+
 1. Adds a ‘Hand-tossed’ ‘Medium’ pizza
 2. Adds a ‘Hand-tossed’ ‘Large’ pizza
 3. Adds a ‘Cheese-burst’ ‘Large’ pizza
 4. Adds another ‘Hand-tossed’ ‘Medium’ pizza
 5. Adds another ‘Cheese-burst’ ‘Large’ pizza
-The custom pizzas would be:
-1. 2 ‘Hand-tossed’ ‘Medium’ pizzas
-2. 1 ‘Hand-tossed’ ‘Large’ pizzas
-3. 2 ‘Cheese-burst’ ‘Large’ pizzas
+
+<h3>The custom pizzas would be:</h3>
+<p>1. 2 ‘Hand-tossed’ ‘Medium’ pizzas</p>
+<p>2. 1 ‘Hand-tossed’ ‘Large’ pizzas</p>
+<p>3. 2 ‘Cheese-burst’ ‘Large’ pizzas</p>
 However, the quantity of ‘all pizzas’ for this example, would be 5 (2+1+2).
 
-SPECIFICATIONS
+<h3>SPECIFICATIONS</h3>
 1. Minimum supported Android version should be Android 5.0 but the app should target the
 latest publicly available Android version.
 2. Do not use any deprecated SDK components, methods, libraries, etc.
-
 3. Git must be used for version control & all commits must have the same author name &
 e-mail address as shared with us.
 4. Maintain appropriate commit history while working on the project. Submissions with just a
@@ -32,29 +32,29 @@ progressing through the task.
 anywhere in the project. The repository should include an APK built with the latest code
 at the default location.
 
-GUIDELINES
-These guidelines are not mandatory but will give you extra marks if followed:
-1. Try using the new Material Design Components for all UI components
+<h3>GUIDELINES</h3>
+<h5>These guidelines are not mandatory but will give you extra marks if followed:</h5>
+- Try using the new Material Design Components for all UI components
 [https://material.io/develop/android].
-2. Try to use Retrofit & GSON for networking & serialization/deserialization.
-3. If using Kotlin, try to ensure that the project is optimised for Kotlin e.g. use KAPT if using
+- Try to use Retrofit & GSON for networking & serialization/deserialization.
+- If using Kotlin, try to ensure that the project is optimised for Kotlin e.g. use KAPT if using
 annotation processing, use KTX dependencies if available, etc.
-4. Try to configure the project to use Java 8 & latest versions of all plugins/dependencies.
-5. Try to use resources (colours, dimensions, styles & themes) to set view attributes instead
+- Try to configure the project to use Java 8 & latest versions of all plugins/dependencies.
+- Try to use resources (colours, dimensions, styles & themes) to set view attributes instead
 of hard-coding in layout XML.
-6. Try to follow best practices & latest standards for SDK usage, coding, version control &
+- Try to follow best practices & latest standards for SDK usage, coding, version control &
 design. Try to write modular/reusable code wherever possible.
-7. Try to add comments to the code wherever it might be suitable.
-8. Before submitting, consider optimising performance, memory usage & stability.
+- Try to add comments to the code wherever it might be suitable.
+- Before submitting, consider optimising performance, memory usage & stability.
 
-REQUIRED FEATURES
+<h3>REQUIRED FEATURES</h3>
 1. A REST API call must be made to fetch pizza data as a JSON.
 API URL
 [GET] https://android.free.beeceptor.com/pizzas
 
-Note, the API will only allow 50 requests/day. So, mock the API locally during
-development.
-Sample JSON Response
+<p>Note, the API will only allow 50 requests/day. So, mock the API locally during
+development.</p>
+<h3>Sample JSON Response</h3>
 {
 "name": "Non-Veg Pizza",
 "isVeg": false,
