--- a/1.Customisable Pizzas/app/src/main/res/values/strings.xml
+++ b/1.Customisable Pizzas/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Customisable Pizzas</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="pizza_s_list">Pizza\'s List</string>
 </resources>
